--- a/LifeCycle/app/src/main/res/layout/activity_main.xml
+++ b/LifeCycle/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,22 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.tutorial.timothypratama.lifecycle.MainActivity">
+    tools:context="com.tutorial.timothypratama.lifecycle.MainActivity"
+    android:onClick="nextPage">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="Main Activity" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textview" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_marginTop="56dp"
+        android:layout_below="@+id/textview"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:spinnerMode="dialog"
+        android:entries="@array/operating_systems"/>
 
 </RelativeLayout>
