--- a/AndroidIntents/app/src/main/res/layout/activity_result.xml
+++ b/AndroidIntents/app/src/main/res/layout/activity_result.xml
@@ -1,6 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.tutorial.timothypratama.androidintents.ResultActivity">
 
     <TextView
         android:id="@+id/displayintentextra"
@@ -12,9 +16,13 @@
     <EditText
         android:id="@+id/returnValue"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/displayintentextra"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="23dp">
 
         <requestFocus />
     </EditText>
 
-</LinearLayout>
+</RelativeLayout>
